# LAB_Tool

./: CMakeLists.txt  LAB_Tool.code-workspace  README.md  Step.md
resources/config_templates/: config_templates.ini  config_templates.json
src/: main.cpp
src/core/: ColorConverter.cpp  ColorConverter.h  cameramanager.cpp  cameramanager.h
src/gui/: MyColorDialog.qml  main.qml  qml.qrc
src/gui/controllers/: cameraprocess.cpp  cameraprocess.h  dataprocess.cpp  dataprocess.h  imageprovider.cpp  imageprovider.h  screenshotprovider.cpp  screenshotprovider.h
